[package]
name = "hey_listen"
version = "0.2.1"
license = "ISC"
keywords = ["event", "dispatcher", "listener", "emitter", "parallel"]
categories = ["concurrency"]
description = "An event-dispatcher-collection offering sync, parallel, and prioritised solutions!"
readme = "README.md"
documentation = "https://docs.rs/hey_listen"
repository = "https://github.com/lakelezz/hey_listen.git"
authors = ["Lakelezz <lakelezz@protonmail.ch>"]
build = "build.rs"
edition = "2018"

[dependencies]
rayon = "1.0"
failure = "0.1"
failure_derive = "0.1"

[dependencies.parking_lot]
version = "0.7"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"

